# minicycle-rs

./: .dockerignore  .gitignore  .podman-play  Cargo.toml  Dockerfile  README.md  minicycle.example.toml  minicycle.toml
scripts/: podman-build.sh  podman-pull.sh  podman-run-with-socket.sh  podman-run.sh  podman-upload.sh
src/: appstate.rs  cfg.rs  filters.rs  force_symlink.rs  git.rs  main.rs  payload.rs  report.rs
