[package]
name = "minicycle-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
hmac = "0.12.1"
sha2 = "0.10.9"
hex-literal = "1.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.11"
